@@ -103,12 +103,12 @@ public class StatFormationPresentation implements Serializable {
 
 	public StatFormationPresentation(final Formation f) {
 		super();
-		this.id = f.getIdForm();
-		this.cod = f.getCodForm();
-		this.lib = f.getLibForm();
-		this.libSupp = f.getCommission().getLibComm();
-		this.tes = f.getTesForm();
-		this.capaciteAccueil = f.getCapaciteForm() != null ? new Long(f.getCapaciteForm()) : null;
+		id = f.getIdForm();
+		cod = f.getCodForm();
+		lib = f.getLibForm();
+		libSupp = f.getCommission().getLibComm();
+		tes = f.getTesForm();
+		capaciteAccueil = f.getCapaciteForm() != null ? new Long(f.getCapaciteForm()) : null;
 	}
 
 	public StatFormationPresentation() {
@@ -117,39 +117,39 @@ public class StatFormationPresentation implements Serializable {
 
 	public StatFormationPresentation(final Commission c) {
 		super();
-		this.id = c.getIdComm();
-		this.cod = c.getCodComm();
-		this.lib = c.getLibComm();
-		this.libSupp = c.getLibComm();
-		this.tes = c.getTesComm();
+		id = c.getIdComm();
+		cod = c.getCodComm();
+		lib = c.getLibComm();
+		libSupp = c.getLibComm();
+		tes = c.getTesComm();
 	}
 
 	public StatFormationPresentation(final CentreCandidature c) {
 		super();
-		this.id = c.getIdCtrCand();
-		this.cod = c.getCodCtrCand();
-		this.lib = c.getLibCtrCand();
-		this.libSupp = c.getLibCtrCand();
-		this.tes = c.getTesCtrCand();
+		id = c.getIdCtrCand();
+		cod = c.getCodCtrCand();
+		lib = c.getLibCtrCand();
+		libSupp = c.getLibCtrCand();
+		tes = c.getTesCtrCand();
 	}
 
 	public void setFooter() {
-		this.nbCandidatureTotal = new Long(0);
-		this.capaciteAccueil = new Long(0);
-		this.nbCandidatureCancel = new Long(0);
-		this.nbStatutAttente = new Long(0);
-		this.nbStatutComplet = new Long(0);
-		this.nbStatutIncomplet = new Long(0);
-		this.nbStatutReceptionne = new Long(0);
-		this.nbAvisFavorable = new Long(0);
-		this.nbAvisDefavorable = new Long(0);
-		this.nbAvisListeAttente = new Long(0);
-		this.nbAvisListeComp = new Long(0);
-		this.nbAvisPreselection = new Long(0);
-		this.nbAvisTotal = new Long(0);
-		this.nbAvisTotalValide = new Long(0);
-		this.nbAvisTotalNonValide = new Long(0);
-		this.nbConfirm = new Long(0);
-		this.nbDesist = new Long(0);
+		nbCandidatureTotal = Long.valueOf("0");
+		capaciteAccueil = Long.valueOf("0");
+		nbCandidatureCancel = Long.valueOf("0");
+		nbStatutAttente = Long.valueOf("0");
+		nbStatutComplet = Long.valueOf("0");
+		nbStatutIncomplet = Long.valueOf("0");
+		nbStatutReceptionne = Long.valueOf("0");
+		nbAvisFavorable = Long.valueOf("0");
+		nbAvisDefavorable = Long.valueOf("0");
+		nbAvisListeAttente = Long.valueOf("0");
+		nbAvisListeComp = Long.valueOf("0");
+		nbAvisPreselection = Long.valueOf("0");
+		nbAvisTotal = Long.valueOf("0");
+		nbAvisTotalValide = Long.valueOf("0");
+		nbAvisTotalNonValide = Long.valueOf("0");
+		nbConfirm = Long.valueOf("0");
+		nbDesist = Long.valueOf("0");
 	}
 }
